2004-03-05		Florian Boor <florian.boor@kernelconcepts.de>
	* Added cool netlink using implementation by 
		Philip Blundell <philb@gnu.org>.
	
2004-03-04		Florian Boor <florian.boor@kernelconcepts.de>
	* Added messages for change events.
	* Fixed path to icon in .desktop file.
	* Removed obsolete code and includes.
	* Released V 0.2
	
2004-03-03		Florian Boor <florian.boor@kernelconcepts.de>
    * Created this project
	* made it work
	* Released V 0.1