@@ -1,3 +1,6 @@
+2004-04-01		Florian Boor <florian.boor@kernelconcepts.de>
+	* Rewrote dock code to use libmb.
+	
 2004-03-05		Florian Boor <florian.boor@kernelconcepts.de>
 	* Added cool netlink using implementation by 
 		Philip Blundell <philb@gnu.org>.
